# rust16vm

./: .gitignore  Cargo.toml  LICENSE  README.md  \
.github/workflows/: run-tests.yml
scripts/: compile_run.sh
src/: lib.rs  machine.rs  memory.rs  mmio.rs
src/asm/: macros.rs  mod.rs
src/devices/: keyboard.rs  mod.rs  screen.rs  terminal.rs
testdata/: arthur.s  bug.s  call.s  eclesio.s  exemplo.s  exp.s  factorial.s  fibo.go  fibo.s  hello.s  hello_V2.s  hiago.s  hy.s  joao.s  jose.s  loop.s  mdc.s  mdc2.s  mmc.s  mod.s  myname.s  simple_loop.s  test.s  vitor.s
