[package]
name = "rust16vm"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] } 
crossterm = "0.28.1"
async-std = "1.13.0"
futures = "0.3.31"
crossbeam-channel = "0.5.14"

[[bin]]
name = "vm"
path = "./bin/vm.rs"

[[bin]]
name = "asm"
path = "./bin/asm.rs"
